# docs/api/tenant-management-openapi.yaml
@@ -631,6 +631,11 @@ components:
           minLength: 1
           title: External Source
           type: string
+        house_domain:
+          maxLength: 255
+          minLength: 1
+          title: House Domain
+          type: string
         initial_principal:
           anyOf:
           - $ref: '#/components/schemas/ProvisionTenantRequest.f44f287.InitialPrincipalRequest'
@@ -641,11 +646,18 @@ components:
           minLength: 1
           title: Name
           type: string
+        public_agent_url:
+          maxLength: 500
+          minLength: 1
+          title: Public Agent Url
+          type: string
       required:
       - name
       - external_org_id
       - external_source
       - contact_email
+      - house_domain
+      - public_agent_url
       - adapter
       title: ProvisionTenantRequest
       type: object
@@ -864,6 +876,12 @@ components:
           - type: 'null'
           default: null
           title: External Source
+        house_domain:
+          anyOf:
+          - type: string
+          - type: 'null'
+          default: null
+          title: House Domain
         is_active:
           title: Is Active
           type: boolean
@@ -873,6 +891,12 @@ components:
         name:
           title: Name
           type: string
+        public_agent_url:
+          anyOf:
+          - type: string
+          - type: 'null'
+          default: null
+          title: Public Agent Url
         subdomain:
           anyOf:
           - type: string
@@ -1131,6 +1155,14 @@ components:
           - type: 'null'
           default: null
           title: Contact Email
+        house_domain:
+          anyOf:
+          - maxLength: 255
+            minLength: 1
+            type: string
+          - type: 'null'
+          default: null
+          title: House Domain
         name:
           anyOf:
           - maxLength: 255
@@ -1139,6 +1171,14 @@ components:
           - type: 'null'
           default: null
           title: Name
+        public_agent_url:
+          anyOf:
+          - maxLength: 500
+            minLength: 1
+            type: string
+          - type: 'null'
+          default: null
+          title: Public Agent Url
       title: UpdateTenantRequest
       type: object
     ValidationError.6a07bef:
